src/alto-ui/Form/Radio/Radio.scss
@import '../../scss/inc';

.Radio {
  position: relative;
  line-height: 1;
}

.Radio__input {
  @extend %visually-hidden;
}

.Radio__label {
  font-size: $font-size-medium;
  padding-left: 1.5em;
  cursor: pointer;
  position: relative;
  outline: 0;
  display: inline-block;
  max-width: 100%;

  &--readOnly {
    cursor: default;
  }

  &--disabled {
    cursor: not-allowed;
  }

  &::before,
  &::after {
    position: absolute;
    content: '';
    display: block;
    transition: background-color, box-shadow, border-color $transition;
  }

  &::before {
    left: 0;
    border: 1px solid $color-input-border;
    background-color: white;
    top: 0.5em;
    height: 1em;
    width: 1em;
    border-radius: 10rem;

    input:checked + & {
      border-color: $blue;
      background-color: $blue;
    }

    input:disabled:not(.Radio__input--readOnly) + & {
      background-color: $blue-10;
    }

    input:checked:disabled:not(.Radio__input--readOnly) + & {
      border-color: $coolgrey-20;
      background-color: $blue-10;
    }

    input:focus + & {
      box-shadow: 0 0 0 3px $blue-20;
      @include focused(true);
    }
  }

  &::after {
    input:checked + & {
      left: 0.3125em;
      top: 0.8125em;
      height: 0.5em;
      width: 0.5em;
      background: $white;
      border-radius: 10rem;
    }

    input:checked:disabled:not(.Radio__input--readOnly) + & {
      background: $coolgrey-30;
    }
  }
}

.Radio__label-text {
  @extend %multiline-label;

  &--hidden {
    @extend %visually-hidden;
  }
}

